--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ main {
   flex-direction: column;
   position: relative;
 }
+button {
+  background: transparent;
+  border: none;
+}
 .top {
   height: 40vh;
   background-image: url("./images/bg-desktop-dark.jpg");
@@ -31,8 +35,9 @@ main {
   width: 40vw;
 }
 a {
-  text-align: none;
-  color: hsl(0, 0%, 98%);
+  text-decoration: none;
+  /* color: hsl(0, 0%, 98%); */
+  cursor: pointer;
 }
 h1 {
   letter-spacing: 10px;
@@ -71,7 +76,7 @@ input[type="checkbox"]:checked {
 
   /* border: 1px solid hsl(192, 100%, 67%); */
 }
-.title-item {
+.completed-item {
   text-decoration: line-through;
   color: #999;
 }
@@ -90,88 +95,9 @@ input[type="checkbox"]:checked {
 .input-group-text {
   border: 0 !important;
 }
-
-/* ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  background-color: #eee;
-  font-size: 18px;
-  transition: 0.2s;
+.list-group-item button {
+  display: none;
 }
-ul li:nth-child(odd) {
-  background-color: #f9f9f9;
+.list-group-item:hover button {
+  display: block;
 }
-ul li:hover {
-  background-color: #ddd;
-}
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
-}
-
-ul li.checked::before {
-  content: "";
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
-}
-
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-.header {
-  background-color: #f44336;
-  padding: 30px 40px;
-  color: white;
-  text-align: center;
-}
-
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
-}
-
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
-}
-
-.addBtn:hover {
-  background-color: #bbb;
-} */
