--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,16 @@ main {
 button {
   background: transparent;
   border: none;
+  color: hsl(234, 39%, 85%);
+}
+button:hover {
+  color: #fff;
+}
+button.active {
+  color: hsl(220, 98%, 61%) !important;
+}
+.light-text {
+  color: rgb(106, 108, 134);
 }
 .top {
   height: 40vh;
@@ -34,11 +44,7 @@ button {
   transform: translate(-50%, -50%);
   width: 40vw;
 }
-a {
-  text-decoration: none;
-  /* color: hsl(0, 0%, 98%); */
-  cursor: pointer;
-}
+
 h1 {
   letter-spacing: 10px;
   color: #fff;
@@ -52,6 +58,10 @@ h1 {
 .light-bg {
   background-color: hsl(0, 0%, 98%);
   color: #111;
+}
+.light {
+  color: hsl(234, 39%, 85%);
+  font-weight: 400;
 }
 
 input[type="checkbox"] {
@@ -100,4 +110,14 @@ input[type="checkbox"]:checked {
 }
 .list-group-item:hover button {
   display: block;
+}
+
+@media (max-width: 686px) {
+  .content {
+    /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+    width: 80vw;
+  }
 }
